--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 7.24.3
+          run_install: true
       - run: |
           node scraping/leaderboard.js
           git config user.name jffc-dev
