--- a/.github/workflows/scrape-kings-league-infoJobs-website.yml
+++ b/.github/workflows/scrape-kings-league-infoJobs-website.yml
@@ -22,7 +22,7 @@ jobs:
           version: 7.24.3
           run_install: true
       - run: |
-          node scraping/leaderboard.js
+          node .\scraping\leaderboard.js
           git config user.name jffc-dev-bot
           git add -A
           git commit -m "bot(data): Get data from kings league"
